--- a/Kalkulus 2/Bab 1/1F Eksponen dan Log.html
+++ b/Kalkulus 2/Bab 1/1F Eksponen dan Log.html
@@ -74,9 +74,9 @@
           </a>
           <ol class="sub-menu">
             <div>
-            <li><a href="#">Integrasi Parsial dan Interaksi <br> Fungsi Trigonometri</a></li>
-            <li><a href="Bab 2/Integrasi Parsial dan Integrasi Fungsi Trigonometri.html">Integrasi Fungsi Rasional <br> dan Pecahan Rasional</a></li>
-            <li><a href="Bab 2/Teknik-teknik integrasi yang lalu.html">Teknik-teknik integrasi <br>yang lalu</a></li>
+            <li><a href="../Bab 2/1Integrasi Parsial dan Integrasi Fungsi Trigonometri.html">Integrasi Parsial dan Interaksi <br> Fungsi Trigonometri</a></li>
+            <li><a href="../Bab 2/Integrasi Fungsi Rasional dan Pecahan Rasional.html">Integrasi Fungsi Rasional <br> dan Pecahan Rasional</a></li>
+            <li><a href="../Bab 2/Teknik-teknik integrasi yang lalu.html">Teknik-teknik integrasi <br>yang lalu</a></li>
             </div>
           </ol>
         </li>
@@ -152,10 +152,10 @@
 
     <div id="home">
       <h2 style="display: flex; justify-content: center;">A) Rangkuman Materi</h2> <br>
-        <p style="font-size: 118%;"><b>1.1 Bilangan Berpangkat</b> </p>
+        <p style="font-size: 118%;"><b>1 Bilangan Berpangkat</b> </p>
     <div class="dfn-box definisi">
       <div class="dfn-header">
-        Definisi 1.1.1</div>
+        Definisi 1.1</div>
       <div class="dfn-content"> 
         Jika n bilangan positif, maka        
         <p style="text-align: center;">\( a^n = \underbrace{a \cdot a \cdot a \cdots a}_{n\ \text{faktor}} \)</p>
@@ -171,7 +171,7 @@
         </ol> <br>
 <div class="dfn-box definisi">
   <div class="dfn-header">
-    Definisi 1.1.2</div>
+    Definisi 1.2</div>
   <div class="dfn-content">
     jika r adalah bilangan rasional dengan \(r = \frac{p}{q} \),  \(r>0\), maka 
 
@@ -181,24 +181,24 @@
           </ol>
     </div>  
 </div>
-        <p style="font-size: 118%;"><b>1.2 Fungsi Eksponensial</b> </p>
+        <p style="font-size: 118%;"><b>2 Fungsi Eksponensial</b> </p>
         <div style="text-align: center;">
 <img src="../gambar/gambar_1.1.1.svg" alt="Grafik Eksponensial" style="width: 45%;"><br>
-<p"><b>Gambar 1.2.1</b> Grafik Eksponensial</p>
+<p"><b>Gambar 2.1</b> Grafik Eksponensial</p>
         </div>
-            <p style="font-size: 118%;"><b>1.3 Fungsi Eksponensial Natural </b> </p>
+            <p style="font-size: 118%;"><b>3 Fungsi Eksponensial Natural </b> </p>
     <ol class="materi1">
       <li>\(\lim_{x \to +\infty} (1 + \frac{1}{x})^x = e\)</li>
       <li>\(\lim_{x \to -\infty} (1 + \frac{1}{x})^x = e\)</li>
     </ol> <br>
 
-    <p style="font-size: 118%;"><b>1.4 Fungsi Logaritma </b> </p>
+    <p style="font-size: 118%;"><b>4 Fungsi Logaritma </b> </p>
           <p style="text-align: center;">\( {}^{a}\log_{b}x \) </p>
           dengan \(a>0,\) \(a \ne 1\) dan \(x>0\) (<b>Dibaca:</b> logaritma berbasis a dari x).
 
     <div class="dfn-box teorema">
       <div class="dfn-header"> 
-        Teorema 1.4.1
+        Teorema 4.1
       </div>
       <div class="materi1">
         <ol>
@@ -214,18 +214,18 @@
     </div>
 <div class="dfn-box teorema">
       <div class="dfn-header"> 
-        Teorema 1.4.2
+        Teorema 4.2
       </div>
       <div class="materi1">
         <p style="display: flex; justify-content: center;">\({}^{a}\log_{x} = \frac{{}^{b}\log_{x}}{{}^{b}\log_{x}}\) </p>
       </div>
     </div>
 
-<p style="font-size: 118%;"><b>1.5 Fungsi Logaritma Natural </b> </p>
+<p style="font-size: 118%;"><b>5 Fungsi Logaritma Natural </b> </p>
 
     <div class="dfn-box definisi">
           <div class="dfn-header"> 
-            Definisi 1.5.1
+            Definisi 5.1
           </div>
           <div class="materi1">
             Untuk \(a>0\) dan \(a\ne1\), fungsi logaritma berbasis a didefinisikan dengan rumus <br>
@@ -234,7 +234,7 @@
         </div>
     <div class="dfn-box teorema">
       <div class="dfn-header"> 
-        Teorema 1.5.2
+        Teorema 5.2
       </div>
           <div class="materi1">
             <p>untuk sebarang bilangan positif \(b, c\) dan sebarang bilangan rasional \(r,\) berlaku </p> 
@@ -248,7 +248,7 @@
         </div>
     <div class="dfn-box definisi">
       <div class="dfn-header"> 
-        Definisi 1.5.3
+        Definisi 5.3
       </div>
       <div class="materi1">
         Jika x adalah bilangan real dan a adalah bilangan real positif, maka fungsi \(f(x)=a^x\) didefinisikan dengan rumus
@@ -259,7 +259,7 @@
 
           <div class="dfn-box teorema">
             <div class="dfn-header"> 
-              Teorema 1.5.4
+              Teorema 5.4
             </div>
             <div class="materi1">
                 <p>untuk sebarang bilangan positif \(a\) dan sebarang bilangan real \(x\) berlaku </p> 
@@ -267,10 +267,10 @@
             </div>
           </div>
 
-<p style="font-size: 120%;"><b><u>1.6  Grafik dari Fungsi Logaritma dan Eksponensial </u></b> </p>        
+<p style="font-size: 120%;"><b><u>6  Grafik dari Fungsi Logaritma dan Eksponensial </u></b> </p>        
           <div class="dfn-box teorema">
             <div class="dfn-header"> 
-              Teorema 1.6.1
+              Teorema 6.1
             </div>
             <div class="materi1">
                 <div class="dfn-content">
@@ -281,7 +281,7 @@
 
           <div class="dfn-box teorema">
             <div class="dfn-header"> 
-              Teorema 1.6.2
+              Teorema 6.2
             </div>
             <div class="materi1">
                 <div class="dfn-content">
@@ -292,7 +292,7 @@
 
           <div class="dfn-box teorema">
             <div class="dfn-header"> 
-              Teorema 1.6.3
+              Teorema 6.3
             </div>
             <div class="materi1">
                 <div class="dfn-content">
@@ -306,7 +306,7 @@
 
           <div class="dfn-box teorema">
             <div class="dfn-header"> 
-              Teorema 1.6.4
+              Teorema 6.4
             </div>
             <div class="materi1">
                 <div class="dfn-content">
@@ -320,7 +320,7 @@
 
                     <div class="dfn-box definisi">
             <div class="dfn-header"> 
-              Definisi 1.6.5
+              Definisi 6.5
             </div>
             <div class="materi1">
                 <div class="dfn-content">
@@ -331,16 +331,16 @@
 
 <div style="text-align: center;">
 <img src="../gambar/gambar_1.1.2.svg" alt="Grafik Eksponensial" style="width:45%; "> <br>
-<p"><b>Gambar 1.2.2</b> Grafik Logaritmik</p>
+<p"><b>Gambar 6.1</b> Grafik Logaritmik</p>
 
   <img src="../gambar/gambar_1.1.3.svg" alt="Grafik Eksponensial" style="width: 45%; "> <br>
-<p><b>Gambar 1.2.3</b> Grafik Logaritmik</p>
+<p><b>Gambar 6.2</b> Grafik Logaritmik</p>
 
 </div>
 
           <div class="dfn-box teorema">
             <div class="dfn-header"> 
-              Teorema 1.6.6
+              Teorema 6.6
             </div>
             <div class="materi1">
                 <div class="dfn-content">
@@ -355,7 +355,7 @@
           </div>
           </div>
 
-<p style="font-size: 118%;"><b>1.7 Turunan dan Integral Fungsi Logaritma  </b> </p> 
+<p style="font-size: 118%;"><b>7 Turunan dan Integral Fungsi Logaritma  </b> </p> 
         Jika \(u(x) \gt 0,\) dan fungsi \(u\) dapat diturunkan di \(x,\) maka
         <p style="display: flex;justify-content: center;">\(\frac{d}{dx} [{}^a \log x] = \frac{1}{x \ln a} \frac{du}{dx}  \) &nbsp; dan &nbsp;  \(  \frac{d}{dx}[\ln u]=\frac{1}{x}\frac{du}{dx}\)</p>
 
@@ -369,10 +369,10 @@
                 </div>
           </div>
 
-<p style="font-size: 118%;"><b>1.8 Turunan Pangkat Real X  </b> </p>  
+<p style="font-size: 118%;"><b>8 Turunan Pangkat Real X  </b> </p>  
               <div class="dfn-box teorema">
                 <div class="dfn-header"> 
-                  Teorema 1.8.1
+                  Teorema 8.1
                 </div>
                 <div class="materi1">
                 <p>Untuk sebarang bilangan real \(r\) fungsi \(x^r\) dapat diturunkan pada \((0,+\infty)\) dan turunannya adalah</p>
@@ -380,7 +380,7 @@
             </div>
           </div>       
 
-<p style="font-size: 118%;"><b>1.9 Turunan dan Fungsi Eksponensial  </b> </p>
+<p style="font-size: 118%;"><b>9 Turunan dan Fungsi Eksponensial  </b> </p>
              <div class="dfn-box teorema">
                 <div class="dfn-header"> 
                   Teorema 1.9.1
@@ -399,7 +399,7 @@
 
           <div class="dfn-box teorema">
             <div class="dfn-header"> 
-              Teorema 1.9.2
+              Teorema 9.2
             </div>
             <div class="materi1">
               <ol>
@@ -411,7 +411,7 @@
           </div>
 
 
-<p style="font-size: 118%;"><b>1.10 Grafik yang Melibatkan Fungsi Eksponensial dan Logaritma  </b> </p>
+<p style="font-size: 118%;"><b>10 Grafik yang Melibatkan Fungsi Eksponensial dan Logaritma  </b> </p>
  <style>
     table {
       border-collapse: collapse;
