--- a/Kalkulus 2/Bab 1/2F Invers n Trigono.html
+++ b/Kalkulus 2/Bab 1/2F Invers n Trigono.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -74,9 +75,9 @@
           </a>
           <ol class="sub-menu">
             <div>
-            <li><a href="#">Integrasi Parsial dan Interaksi <br> Fungsi Trigonometri</a></li>
-            <li><a href="Bab 2/Integrasi Parsial dan Integrasi Fungsi Trigonometri.html">Integrasi Fungsi Rasional <br> dan Pecahan Rasional</a></li>
-            <li><a href="Bab 2/Teknik-teknik integrasi yang lalu.html">Teknik-teknik integrasi <br>yang lalu</a></li>
+            <li><a href="../Bab 2/1Integrasi Parsial dan Integrasi Fungsi Trigonometri.html">Integrasi Parsial dan Interaksi <br> Fungsi Trigonometri</a></li>
+            <li><a href="../Bab 2/Integrasi Fungsi Rasional dan Pecahan Rasional.html">Integrasi Fungsi Rasional <br> dan Pecahan Rasional</a></li>
+            <li><a href="../Bab 2/Teknik-teknik integrasi yang lalu.html">Teknik-teknik integrasi <br>yang lalu</a></li>
             </div>
           </ol>
         </li>
@@ -152,28 +153,28 @@
 
     <div id="home">
       <h2 style="display: flex; justify-content: center;">A) Rangkuman Materi</h2> <br>
-        <p style="font-size: 118%;"><b>1.1 Fungsi Naik dan Turun yang Mempunyai Invers</b> </p>
+        <p style="font-size: 118%;"><b>1 Fungsi Naik dan Turun yang Mempunyai Invers</b> </p>
     <div class="dfn-box teorema">
       <div class="dfn-header" id="teorema1.1.1">
-        Teorema 1.1.1</div>
+        Teorema 1.1</div>
       <div class="dfn-content"> 
         Jika domain \(f\) adalah suatu selang dan jika \(f\) fungsi naik atau turun pada selan itu, maka \(f\) satu-satu dan karenanya  mempunyai invers. 
       </div>
     </div>
    <br>
-<p style="font-size: 118%;"><b>1.2 Kontinuitas Fungsi Invers</b> </p>
+<p style="font-size: 118%;"><b>2 Kontinuitas Fungsi Invers</b> </p>
     <div class="dfn-box teorema">
       <div class="dfn-header">
-        Teorema 1.2.1</div>
+        Teorema 2.1</div>
       <div class="dfn-content"> 
         Jika \(f\) fungsi kontinu dan mempunyai invers, maka \(f^{-1}\) juga kontinu.
        </div>
     </div>
 
-<p style="font-size: 118%;"><b>1.3 Rumus Turunan Fungsi Hiperbolik </b> </p>
+<p style="font-size: 118%;"><b>3 Rumus Turunan Fungsi Hiperbolik </b> </p>
     <div class="dfn-box teorema">
       <div class="dfn-header">
-        Teorema 1.3.1</div>
+        Teorema 3.1</div>
       <div class="dfn-content"> 
         Asumsikan fungsi \(f\) mempunyai invers dan nilai dari \(f^{-1}\) berubah-ubah di atas suatu selang f yang mempunyai turunan tidak nol seperti \(x\) berubah-ubah di atas selang I. Maka \(f^{-1}\) dapat diturunkan pada I dan turunan \( f^{-1} \) diberikan oleh rumus berikut:
         \[
@@ -186,17 +187,17 @@
         dengan \(y=f^{-1}(x)\) sehingga \(x=f(y)\). <br>
        </div>
     </div>
-    <p style="font-size: 118%;"><b>1.4 Invers Sinus </b> </p> <br>
+    <p style="font-size: 118%;"><b>4 Invers Sinus </b> </p> 
     <div class="dfn-box definisi">
       <div class="dfn-header">
-        Teorema 1.4.1</div>
+        Teorema 4.1</div>
       <div class="dfn-content"> 
         Fungsi invers sinus yang ditulis \(\sin^{-1} x\), didefinisikan sebagai invers dari fungsi sin \(x, \frac{\pi}{2} \leq x \leq -\frac{\pi}{2}\). <br> 
        </div>
     </div>
     <div class="dfn-box teorema">
       <div class="dfn-header">
-        Teorema 1.4.2</div>
+        Teorema 4.2</div>
       <div class="dfn-content"> 
         \(y = \sin^{-1} x\) ekuivalen dengan \(\sin y = x\) untuk semua \(x,y\) dengan \(\sin y = x\)   jika \( 
     \left\{
@@ -208,7 +209,7 @@
   \) <br> 
        </div>
     </div>
-<p style="font-size: 118%;"><b>1.5 Interpretasi Geometri dari \(\sin^{-1} x\)</b> </p>
+<p style="font-size: 118%;"><b>5 Interpretasi Geometri dari \(\sin^{-1} x\)</b> </p>
 <style>
   .tabeltrig {
     overflow: auto;
@@ -271,9 +272,9 @@
     </tr>
   </tbody>
 </table>
-<p style="text-align: center;"><b>Tabel 1.5.1</b> Interpretasi Geometri dari Fungsi Invers Trigonometri</p>
+<p style="text-align: center;"><b>Tabel 5.1</b> Interpretasi Geometri dari Fungsi Invers Trigonometri</p>
 <br>
-<p style="font-size: 118%;"><b>1.6 Invers Cotangen dan Cosecan</b> </p>
+<p style="font-size: 118%;"><b>6 Invers Cotangen dan Cosecan</b> </p>
 <table border="1" cellpadding="10" cellspacing="0" class="tabeltrig" style="max-width: 400px;"> 
   <thead>
     <tr style="background-color: rgb(209, 209, 209);">
@@ -312,22 +313,22 @@
     </td>
 
 </table>
-<p style="text-align: center;"><b>Tabel 1.5.2</b> Interpretasi Cotangen dan Cosecan</p>    
-<p style="font-size: 118%;"><b>1.7 Persamaan yang Melibatkan Fungsi-fungsi Invers Trigononometri</b> </p>
+<p style="text-align: center;"><b>Tabel 6.1</b> Interpretasi Cotangen dan Cosecan</p>    
+<p style="font-size: 118%;"><b>7 Persamaan yang Melibatkan Fungsi-fungsi Invers Trigononometri</b> </p>
    <p style="display: flex; justify-content: center;">\(\sin^{-1} x + \cos^{-1} x = \frac{\pi}{2}\)</p>
     <p style="display: flex; justify-content: center;">\(\tan^{-1} x + \cot^{-1} x = \frac{\pi}{2}\)</p>
     <p style="display: flex; justify-content: center;">\(\sec^{-1} x + \csc^{-1} x = \frac{\pi}{2}\)</p>
     <p style="display: flex; justify-content: center;">\(\cos^{-1} x + \sin^{-1} x = \frac{\pi}{2}\)</p>
     <p style="display: flex; justify-content: center;">\(\cot^{-1} x + \tan^{-1} x = \frac{\pi}{2}\)</p>
     <p style="display: flex; justify-content: center;">\(\csc^{-1} x + \sec^{-1} x = \frac{\pi}{2}\)</p>
-<p style="font-size: 118%;"><b>1.8 Penyederhanaan Ekspresi yang Memuat Fungsi Invers Trigonometri</b> </p>
+<p style="font-size: 118%;"><b>8 Penyederhanaan Ekspresi yang Memuat Fungsi Invers Trigonometri</b> </p>
 Misalkan \(\sin y = x,\) sehingga <br><br>
 <div style="display: flex; justify-content: center;">
 <img src="../gambar/gambar_1.2.1.svg" alt="the triangle" style="width: 75%;"></div>
-<p style="text-align: center;"><b>Gambar 1.8.1</b> Interpretasi Segitiga Invers Trigonometri</p>
+<p style="text-align: center;"><b>Gambar 8.1</b> Interpretasi Segitiga Invers Trigonometri</p>
 
 
-<p style="font-size: 118%;"><b>1.9 Rumus-rumus Turunan Fungsi Invers Trigonometri yang diperumum</b> </p>
+<p style="font-size: 118%;"><b>9 Rumus-rumus Turunan Fungsi Invers Trigonometri yang diperumum</b> </p>
 <p style="display: flex; justify-content:center ;">\(\frac{d}{dx}[\sin^{-1} u] = \frac{1}{\sqrt{1 - u^2}} \frac{du}{dx}\)</p>
 <p style="display: flex; justify-content:center ;">\(\frac{d}{dx}[\cos^{-1} u] = -\frac{1}{\sqrt{1 - u^2}} \frac{du}{dx}\)</p>
 <p style="display: flex; justify-content:center ;">\(\frac{d}{dx}[\tan^{-1} u] = \frac{1}{1 + u^2} \frac{du}{dx}\)</p>
@@ -335,7 +336,7 @@ Misalkan \(\sin y = x,\) sehingga <br><br>
 <p style="display: flex; justify-content:center ;">\(\frac{d}{dx}[\sec^{-1} u] = \frac{1}{|u|\sqrt{u^2 - 1}} \frac{du}{dx}\)</p>
 <p style="display: flex; justify-content:center ;">\(\frac{d}{dx}[\csc^{-1} u] = -\frac{1}{|u|\sqrt{u^2 - 1}} \frac{du}{dx}\)</p>
 
-<p style="font-size: 118%;"><b>1.10 Rumus Integrasi Fungsi Invers Trigonometri</b> </p>
+<p style="font-size: 118%;"><b>10 Rumus Integrasi Fungsi Invers Trigonometri</b> </p>
 
 <p style="display: flex; justify-content:center ;">\(\int \frac{du}{\sqrt{a^2 - u^2}} du = \frac{1}{a}\sin^{-1} \frac{u}{a} + C\)</p>
 <p style="display: flex; justify-content:center ;">\(\int \frac{du}{u\sqrt{u^2 - a^2}} du = \frac{1}{a}\sec^{-1} \frac{|u|}{a} + C\)</p>
