--- a/Kalkulus 2/Bab 1/Fungsi Hiperbola.html
+++ b/Kalkulus 2/Bab 1/Fungsi Hiperbola.html
@@ -74,9 +74,9 @@
           </a>
           <ol class="sub-menu">
             <div>
-            <li><a href="#">Integrasi Parsial dan Interaksi <br> Fungsi Trigonometri</a></li>
-            <li><a href="Bab 2/Integrasi Parsial dan Integrasi Fungsi Trigonometri.html">Integrasi Fungsi Rasional <br> dan Pecahan Rasional</a></li>
-            <li><a href="Bab 2/Teknik-teknik integrasi yang lalu.html">Teknik-teknik integrasi <br>yang lalu</a></li>
+            <li><a href="../Bab 2/1Integrasi Parsial dan Integrasi Fungsi Trigonometri.html">Integrasi Parsial dan Interaksi <br> Fungsi Trigonometri</a></li>
+            <li><a href="../Bab 2/Integrasi Fungsi Rasional dan Pecahan Rasional.html">Integrasi Fungsi Rasional <br> dan Pecahan Rasional</a></li>
+            <li><a href="../Bab 2/Teknik-teknik integrasi yang lalu.html">Teknik-teknik integrasi <br>yang lalu</a></li>
             </div>
           </ol>
         </li>
@@ -152,10 +152,10 @@
 
     <div id="home">
       <h2 style="display: flex; justify-content: center;">A) Rangkuman Materi</h2> <br>
-        <p style="font-size: 118%;"><b>1.1 Definisi Fungsi Hiperbolik</b> </p>
+        <p style="font-size: 118%;"><b>1 Definisi Fungsi Hiperbolik</b> </p>
     <div class="dfn-box definisi">
       <div class="dfn-header">
-        Definisi 1.1.1</div>
+        Definisi 1.1</div>
       <div class="dfn-content"> 
         Fungsi sinus hiperbolik dan cosinus hiperbolik, masing-masing dinotasikan dengan \(\sinh\) dan \(\cosh\), dan didefinisikan dengan        
         <p style="text-align: center;">\( \sinh x= \frac{e^x-e^{-x}}{2} \) &nbsp; \(\cosh x = \frac{e^x+e^{-x}}{2}\)</p>
@@ -163,7 +163,7 @@
       </div>
     </div>
    <br>
-<p style="font-size: 118%;"><b>1.2 Kesamaan Hiperbolik</b> </p>
+<p style="font-size: 118%;"><b>2 Kesamaan Hiperbolik</b> </p>
 
 <div style="text-align: center;">
 <p>\(\cosh (-x)=\cosh x\)</p>
@@ -183,7 +183,7 @@
 <p>\(\cosh(x-y)=\cosh x \cosh y - \sinh x \sinh y\)</p>
 </div><br>
 
-<p style="font-size: 118%;"><b>1.3 Rumus Turunan Fungsi Hiperbolik </b> </p>
+<p style="font-size: 118%;"><b>3 Rumus Turunan Fungsi Hiperbolik </b> </p>
     <ol class="materi1">
 <div style="text-align: center;">
 <p>\(\frac{d}{dx}(\sinh u) = \cosh u \frac{du}{dx}\)</p>
@@ -193,7 +193,7 @@
 <p>\(\frac{d}{dx}(\mathrm{sech} {u}) = -\mathrm{sech} {u} \tanh u \frac{du}{dx}\)</p>
 <p>\(\frac{d}{dx}(\mathrm{csch} {u}) = -\mathrm{csch} {u} \coth u \frac{du}{dx}\)</p>
 </div> <br>
-    <p style="font-size: 118%;"><b>1.4 Rumus Integral Fungsi Hiperbolik </b> </p> <br>
+    <p style="font-size: 118%;"><b>4 Rumus Integral Fungsi Hiperbolik </b> </p> <br>
 <div style="text-align: center;">
   \(\int \sinh u \, du = \cosh u + C\) <br> <br>
   \(\int \cosh u \, du = \sinh u + C\) <br> <br>
@@ -207,7 +207,7 @@
   </div>    
  
 
-<p style="font-size: 118%;"><b>1.5 Invers Fungsi Hiperbolik </b> </p>
+<p style="font-size: 118%;"><b>5 Invers Fungsi Hiperbolik </b> </p>
   <!-- Tambahkan MathJax -->
   <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
   <script id="MathJax-script" async
@@ -277,11 +277,11 @@
     </td>
   </tr>
 </table>
-<p style="text-align: center;"><b>Tabel 1.5.1</b> Hubungan Dasar Fungsi Invers Hiperbolik</p>
+<p style="text-align: center;"><b>Tabel 5.1</b> Hubungan Dasar Fungsi Invers Hiperbolik</p>
 
     <div class="dfn-box teorema">
       <div class="dfn-header" id="satulima">
-        Teorema 1.5.1</div>
+        Teorema 5.1</div>
       <div class="dfn-content"> 
         <p style="text-align: center;">\(y=\sinh^{-1}x \) ekuivalen dengan \(\sinh y = x\) untuk semua \(x,y\)</p>
         <p style="text-align: center;">\(y=\cosh^{-1}x \) ekuivalen dengan \(\cosh y = x\) jika \(\begin{cases} x \ge 1 \\ y \ge 0. \end{cases}\)</p>
@@ -293,10 +293,10 @@
       </div>
     </div> 
     
-<p style="font-size: 118%;"><b>1.6 Bentuk Logaritma Fungsi Invers Hiperbolik</b> </p>
+<p style="font-size: 118%;"><b>6 Bentuk Logaritma Fungsi Invers Hiperbolik</b> </p>
     <div class="dfn-box teorema">
       <div class="dfn-header">
-        Teorema 1.6.1</div>
+        Teorema 6.1</div>
       <div class="dfn-content"> 
         Hubungan berikut ini berlaku, dengan pembatasan pada \(x\) dalam <a href="#satulima">(1.5.1)</a>  <br>
         <div style="text-align: center;">
@@ -311,10 +311,10 @@
       </div>
     </div>
    
-<p style="font-size: 118%;"><b>1.7 Rumus Turunan Fungsi Invers Hiperbolik</b> </p>
+<p style="font-size: 118%;"><b>7 Rumus Turunan Fungsi Invers Hiperbolik</b> </p>
     <div class="dfn-box teorema">
       <div class="dfn-header" id="satutujuh">
-        Teorema 1.7.1</div>
+        Teorema 7.1</div>
       <div class="dfn-content"> 
         Hubungan berikut ini berlaku, dengan pembatasan pada \(x\) dalam <a href="#satulima">(1.5.1)</a>  <br>
         <div style="text-align: center;">
@@ -329,10 +329,10 @@
 </div>
 
 </div>
-  Rumus integrasi berdasarkan teorema <a href="#satutujuh">(1.7.1)</a>
+  Rumus integrasi berdasarkan teorema <a href="#satutujuh">(7.1)</a>
     <div class="dfn-box teorema">
       <div class="dfn-header" id="satutujuh">
-        Teorema 1.7.2</div>
+        Teorema 7.2</div>
       <div class="dfn-content"> 
         <div style="text-align: center;">
           <p>\(\int \frac{dx}{\sqrt{x^2 + 1}} = \sinh^{-1}x + C\)</p>
