--- a/Kalkulus 2/Bab 1/Fungsi Hiperbola.html
+++ b/Kalkulus 2/Bab 1/Fungsi Hiperbola.html
@@ -44,7 +44,8 @@
 <body>
   <!-- <header>RANGKUMAN MATERI BAB </header> -->
     <!-- MENU SIDEBAR -->
-    <nav class="sidebar">
+
+        <nav class="sidebar">
       <ol id="menu">
         <div id="sidebar-btn">
           <span class="logo" title="Beranda"><a href="../Kalkulus_2.html"> KALKULUS II</a></span>
@@ -88,9 +89,9 @@
           </a>
           <ol class="sub-menu">
             <div>
-            <li><a href="Bab 3/Integrasi Numerik.html">Integrasi Numerik</a></li>
-            <li><a href="Bab 3/Integrasi Tak Wajar.html">Integrasi Tak Wajar</a></li>
-            <li><a href="Bab 3/Limit Bentuk Tak Tentu.html">Limit Bentuk Tak Tentu</a></li>
+            <li><a href="../Bab 3/Integrasi Numerik.html">Integrasi Numerik</a></li>
+            <li><a href="../Bab 3/Integrasi Tak Wajar.html">Integrasi Tak Wajar</a></li>
+            <li><a href="../Bab 3/Limit Bentuk Tak Tentu.html">Limit Bentuk Tak Tentu</a></li>
             </div>
           </ol>
         </li>
@@ -102,11 +103,11 @@
           </a>
           <ol class="sub-menu">
             <div>
-            <li><a href="Bab 4/Luas antara Dua Kurva.html">Luas antara Dua Kurva</a></li>
-            <li><a href="Bab 4/Menghitung Volume Benda Putar.html">Menghitung Volume Benda Putar</a></li>
-            <li><a href="Bab 4/Panjang suatu Kurva.html">Panjang Suatu Kurva</a></li>
-            <li><a href="Bab 4/Luas Permukaan Benda Putar.html">Luas Permukaan Benda Putar</a></li>
-            <li><a href="Bab 4/Titik Berat (Pusat Massa dan Centroid).html">Titik Berat (Pusat Massa <br>dan Centroid)</a></li>
+            <li><a href="../Bab 4/1Luas antara Dua Kurva.html">Luas antara Dua Kurva</a></li>
+            <li><a href="../Bab 4/2Menghitung Volume Benda Putar.html">Menghitung Volume Benda Putar</a></li>
+            <li><a href="../Bab 4/3Panjang suatu Kurva.html">Panjang Suatu Kurva</a></li>
+            <li><a href="../Bab 4/Luas Permukaan Benda Putar.html">Luas Permukaan Benda Putar</a></li>
+            <li><a href="../Bab 4/Titik Berat (Pusat Massa dan Centroid).html">Titik Berat (Pusat Massa <br>dan Centroid)</a></li>
             </div>
           </ol>
         </li>
@@ -118,11 +119,11 @@
           </a>
           <ol class="sub-menu">
             <div>
-              <li><a href="Bab 5/Persamaan Parametrik.html">Persamaan Parametrik</a></li>
-              <li><a href="Bab 5/Koordinat Kutub.html">Koordinat Kutub</a></li>
-              <li><a href="Bab 5/Grafik dalam Koordinat Kutub.html">Grafik dalam Koordinat Kutub</a></li>
-              <li><a href="Bab 5/Luas dan Volume dalam Koordinat Kutub.html">Luas dan Volume dalam <br>Koordinat Kutub</a></li>
-              <li><a href="Bab 5/Garis Singgung dan Panjang Busur di Koordinat Kutub.html">Garis Singgung dan Panjang <br> Busur di Koordinat Kutub</a></li>
+              <li><a href="../Bab 5/1Persamaan Parametrik.html">Persamaan Parametrik</a></li>
+              <li><a href="../Bab 5/2Koordinat Kutub.html">Koordinat Kutub</a></li>
+              <li><a href="../Bab 5/3Grafik dalam Koordinat Kutub.html">Grafik dalam Koordinat Kutub</a></li>
+              <li><a href="../Bab 5/Luas dan Volume dalam Koordinat Kutub.html">Luas dan Volume dalam <br>Koordinat Kutub</a></li>
+              <li><a href="../Bab 5/Garis Singgung dan Panjang Busur di Koordinat Kutub.html">Garis Singgung dan Panjang <br> Busur di Koordinat Kutub</a></li>
             </div>
           </ol>
         </li>
@@ -134,18 +135,17 @@
           </a>
           <ol class="sub-menu">
             <div>
-              <li><a href="Bab 6/Barisan Tak Hingga.html">Barisan Tak Hingga</a></li>
-              <li><a href="Bab 6/Deret Tak Hingga.html">Deret Tak Hingga</a></li>
-              <li><a href="Bab 6/Uji Konvergensi.html">Uji Konvergensi</a></li>
-              <li><a href="Bab 6/Deret Pangkat, Deret Taylor dan Mclaurin.html">Deret Pangkat; Deret Taylor <br> dan Mclaurin</a></li>
-              <li><a href="Bab 6/Diferensiasi dan Integrasi Deret Pangkat.html">Diferensiasi dan Integrasi <br> Deret Pangkat</a></li>
+              <li><a href="../Bab 6/1Barisan Tak Hingga.html">Barisan Tak Hingga</a></li>
+              <li><a href="../Bab 6/2Deret Tak Hingga.html">Deret Tak Hingga</a></li>
+              <li><a href="../Bab 6/3Uji Konvergensi.html">Uji Konvergensi</a></li>
+              <li><a href="../Bab 6/Deret Pangkat, Deret Taylor dan Mclaurin.html">Deret Pangkat; Deret Taylor <br> dan Mclaurin</a></li>
+              <li><a href="../Bab 6/Diferensiasi dan Integrasi Deret Pangkat.html">Diferensiasi dan Integrasi <br> Deret Pangkat</a></li>
             </div>
           </ol>
         </li>
         <li><a href="../../mainWeb/Web.html" title="Beranda SKPB" id="Back">Kembali</a></li>
       </ol>
     </nav>
-
    <main class="content">
       <h1 style="display: flex; justify-content: left; font-family:Verdana;"> <u>BAB 1 : FUNGSI TRANSENDEN</u></h1><br>
       <h2 style="display: flex; justify-content: left; font-family:Arial;">1.3 Fungsi Hiperbolik</h2> <br>
