--- a/Kalkulus 2/Bab 2/Teknik-teknik integrasi yang lalu.html
+++ b/Kalkulus 2/Bab 2/Teknik-teknik integrasi yang lalu.html
@@ -88,9 +88,9 @@
           </a>
           <ol class="sub-menu">
             <div>
-            <li><a href="Bab 3/Integrasi Numerik.html">Integrasi Numerik</a></li>
-            <li><a href="Bab 3/Integrasi Tak Wajar.html">Integrasi Tak Wajar</a></li>
-            <li><a href="Bab 3/Limit Bentuk Tak Tentu.html">Limit Bentuk Tak Tentu</a></li>
+            <li><a href="../Bab 3/Integrasi Numerik.html">Integrasi Numerik</a></li>
+            <li><a href="../Bab 3/Integrasi Tak Wajar.html">Integrasi Tak Wajar</a></li>
+            <li><a href="../Bab 3/Limit Bentuk Tak Tentu.html">Limit Bentuk Tak Tentu</a></li>
             </div>
           </ol>
         </li>
@@ -102,11 +102,11 @@
           </a>
           <ol class="sub-menu">
             <div>
-            <li><a href="Bab 4/Luas antara Dua Kurva.html">Luas antara Dua Kurva</a></li>
-            <li><a href="Bab 4/Menghitung Volume Benda Putar.html">Menghitung Volume Benda Putar</a></li>
-            <li><a href="Bab 4/Panjang suatu Kurva.html">Panjang Suatu Kurva</a></li>
-            <li><a href="Bab 4/Luas Permukaan Benda Putar.html">Luas Permukaan Benda Putar</a></li>
-            <li><a href="Bab 4/Titik Berat (Pusat Massa dan Centroid).html">Titik Berat (Pusat Massa <br>dan Centroid)</a></li>
+            <li><a href="../Bab 4/1Luas antara Dua Kurva.html">Luas antara Dua Kurva</a></li>
+            <li><a href="../Bab 4/2Menghitung Volume Benda Putar.html">Menghitung Volume Benda Putar</a></li>
+            <li><a href="../Bab 4/3Panjang suatu Kurva.html">Panjang Suatu Kurva</a></li>
+            <li><a href="../Bab 4/Luas Permukaan Benda Putar.html">Luas Permukaan Benda Putar</a></li>
+            <li><a href="../Bab 4/Titik Berat (Pusat Massa dan Centroid).html">Titik Berat (Pusat Massa <br>dan Centroid)</a></li>
             </div>
           </ol>
         </li>
@@ -118,11 +118,11 @@
           </a>
           <ol class="sub-menu">
             <div>
-              <li><a href="Bab 5/Persamaan Parametrik.html">Persamaan Parametrik</a></li>
-              <li><a href="Bab 5/Koordinat Kutub.html">Koordinat Kutub</a></li>
-              <li><a href="Bab 5/Grafik dalam Koordinat Kutub.html">Grafik dalam Koordinat Kutub</a></li>
-              <li><a href="Bab 5/Luas dan Volume dalam Koordinat Kutub.html">Luas dan Volume dalam <br>Koordinat Kutub</a></li>
-              <li><a href="Bab 5/Garis Singgung dan Panjang Busur di Koordinat Kutub.html">Garis Singgung dan Panjang <br> Busur di Koordinat Kutub</a></li>
+              <li><a href="../Bab 5/1Persamaan Parametrik.html">Persamaan Parametrik</a></li>
+              <li><a href="../Bab 5/2Koordinat Kutub.html">Koordinat Kutub</a></li>
+              <li><a href="../Bab 5/3Grafik dalam Koordinat Kutub.html">Grafik dalam Koordinat Kutub</a></li>
+              <li><a href="../Bab 5/Luas dan Volume dalam Koordinat Kutub.html">Luas dan Volume dalam <br>Koordinat Kutub</a></li>
+              <li><a href="../Bab 5/Garis Singgung dan Panjang Busur di Koordinat Kutub.html">Garis Singgung dan Panjang <br> Busur di Koordinat Kutub</a></li>
             </div>
           </ol>
         </li>
@@ -134,11 +134,11 @@
           </a>
           <ol class="sub-menu">
             <div>
-              <li><a href="Bab 6/Barisan Tak Hingga.html">Barisan Tak Hingga</a></li>
-              <li><a href="Bab 6/Deret Tak Hingga.html">Deret Tak Hingga</a></li>
-              <li><a href="Bab 6/Uji Konvergensi.html">Uji Konvergensi</a></li>
-              <li><a href="Bab 6/Deret Pangkat, Deret Taylor dan Mclaurin.html">Deret Pangkat; Deret Taylor <br> dan Mclaurin</a></li>
-              <li><a href="Bab 6/Diferensiasi dan Integrasi Deret Pangkat.html">Diferensiasi dan Integrasi <br> Deret Pangkat</a></li>
+              <li><a href="../Bab 6/1Barisan Tak Hingga.html">Barisan Tak Hingga</a></li>
+              <li><a href="../Bab 6/2Deret Tak Hingga.html">Deret Tak Hingga</a></li>
+              <li><a href="../Bab 6/3Uji Konvergensi.html">Uji Konvergensi</a></li>
+              <li><a href="../Bab 6/Deret Pangkat, Deret Taylor dan Mclaurin.html">Deret Pangkat; Deret Taylor <br> dan Mclaurin</a></li>
+              <li><a href="../Bab 6/Diferensiasi dan Integrasi Deret Pangkat.html">Diferensiasi dan Integrasi <br> Deret Pangkat</a></li>
             </div>
           </ol>
         </li>
@@ -411,12 +411,14 @@ Selesaikan
         <p style="text-align: center;">\(= \int \frac{2}{8u + 3 - 3u^2} \cdot \frac{1}{(1+u^2)} du\)</p>
         <p style="text-align: center;">\(= \int \frac{2}{-3u^2 + 8u + 3} du\)</p>
         <p style="text-align: center;">Pecah menjadi pecahan parsial, lalu integrasikan sesuai bentuknya.</p>
-        ====================BELUM SELESAI===========
-        ====================BELUM SELESAI===========
-        ====================BELUM SELESAI===========
-        ====================BELUM SELESAI===========
-        ====================BELUM SELESAI===========
-        
+        <p style="text-align: center;">\(= \int \frac{2}{-3(u-1)(u+1)} du\)</p>
+        <p style="text-align: center;">\(= \frac{2}{-3} \int \left(\frac{1}{u-1} - \frac{1}{u+1}\right) du\)</p>
+        <p style="text-align: center;">\(= \frac{2}{-3} \left(\ln|u-1| - \ln|u+1|\right) + C\)</p>
+        <p style="text-align: center;">\(= \frac{2}{-3} \ln\left|\frac{u-1}{u+1}\right| + C\)</p>
+        <p style="text-align: center;">\(= \frac{2}{-3} \ln\left|\frac{\frac{2\sin x}{1+\tan^2 x}-1}{\frac{1-\tan^2 x}{1+\tan^2 x}+1}\right| + C\)</p>
+        <p style="text-align: center;">\(= \frac{2}{-3} \ln\left|\frac{2\sin x - (1+\tan^2 x)}{(1-\tan^2 x) + (1+\tan^2 x)}\right| + C\)</p>
+        <p style="text-align: center;">\(= \frac{2}{-3} \ln\left|\frac{2\sin x - 1 - \tan^2 x}{2}\right| + C\)</p>
+        <p style="text-align: center;">\(= \frac{2}{-3} \ln\left|2\sin x - 1 - \tan^2 x\right| + C\)</p>
 
 
 
@@ -424,41 +426,6 @@ Selesaikan
 </details>
 <hr><br> <br>
 
-5. Selesaikan \(\int (\mathrm{sec}^5 x tan^3 x) dx\)<br>
-<b>Hint 1:</b> Gunakan "Pengintegralan Perpangkatan Secan dan Tangen" dengan m ganjil <br>
-<details class="solution">
-  <summary>Pembahasan:</summary><br>
-      <div class="solution-step">
-        <p style="text-align: center;">\(\int (\mathrm{sec}^5 x tan^3 x) dx = \int (\mathrm{sec}^4 x tan^2 x) \mathrm{sec} x tan x dx\)</p>
-        <p style="text-align: center;">\(= \int (\mathrm{sec}^4 x (\mathrm{sec}^2 x - 1)) \mathrm{sec} x tan x dx\)</p>
-        Misalkan \(u = \mathrm{sec} x\), sehingga \(du = \mathrm{sec} x \tan x dx\) <br>
-        <p style="text-align: center;">\(= \int (\mathrm{sec}^4 x (\mathrm{sec}^2 x - 1)) \mathrm{sec} x tan x dx\)</p>
-        <p style="text-align: center;">\(= \int (u^4(u^2 - 1)) du\)</p>
-        <p style="text-align: center;">\(= \int (u^6 - u^4) du\)</p>
-        <p style="text-align: center;">\(= \frac{u^7}{7} - \frac{u^5}{5} + C\)</p>
-        <p style="text-align: center;">\(= \frac{\mathrm{sec}^7 x}{7} - \frac{\mathrm{sec}^5 x}{5} + C\)</p>
-
-      </div>
-</details>
-<hr><br> <br>
-6. Dapatkan \(\int (\cot^3 x csc^3 x) dx\) <br>
-<b>Hint 1:</b> Substitusi \(\cot^2 x = \csc^2 x - 1\) <br>
-<b>Hint 2:</b> Substitusi \(u = \csc x\) <br>
-<details class="solution">
-  <summary>Pembahasan:</summary><br>
-      <div class="solution-step">
-        <p style="text-align: center;">\(\int (\cot^3 x \mathrm{csc}^3 x) dx = \int (\cot^2 x \csc^2 x \cot x \mathrm{csc} x) dx\)</p>
-        <p style="text-align: center;">\(= \int ((\csc^2 x - 1) \csc^2 x \cot x \mathrm{csc} x) dx\)</p>
-        Misalkan \(u = \csc x\), sehingga \(du = -\csc x \cot x dx\) &harr; \(-du = \csc x \cot x dx\) <br>
-        <p style="text-align: center;">\(= -\int ((u^2 - 1) u^2) du\)</p>
-        <p style="text-align: center;">\(= -\int (u^4 - u^2) du\)</p>
-        <p style="text-align: center;">\(= -\left(\frac{u^5}{5} - \frac{u^3}{3}\right) + C\)</p>
-        <p style="text-align: center;">\(= -\left(\frac{\mathrm{csc}^5 x}{5} - \frac{\mathrm{csc}^3 x}{3}\right) + C\)</p>
-
-        </div>
-
-      </details>
-<hr><br>
 
     </div>
     </div>
